Refactor(SVG): Moved SVG stroke and fill attributes to CSS

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -132,6 +132,14 @@ label {
   font-weight: bold;
 }
 
+svg {
+  fill: none;
+  stroke: currentColor;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 2;
+}
+
 textarea {
   margin: 0;
   font-size: fSizes.$medium;
