--- a/views/components/icon/svg/expandIcon.pug
+++ b/views/components/icon/svg/expandIcon.pug
@@ -1,4 +1,4 @@
 mixin expandIcon(attrs={})
-	svg(viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round")&attributes(attrs)
+	svg(viewBox="0 0 24 24")&attributes(attrs)
 		path(stroke="none" d="M0 0h24v24H0z")
 		path(d="m6 9 6 6 6-6")
