--- a/views/components/icon/svg/menuIcon.pug
+++ b/views/components/icon/svg/menuIcon.pug
@@ -1,4 +1,4 @@
 mixin menuIcon(attrs={})
-	svg(viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round")&attributes(attrs)
+	svg(viewBox="0 0 24 24")&attributes(attrs)
 		path(stroke="none" d="M0 0h24v24H0z")
 		path(d="M4 6h16M4 12h16M4 18h16")
