--- a/views/components/icon/svg/profileIcon.pug
+++ b/views/components/icon/svg/profileIcon.pug
@@ -1,5 +1,5 @@
 mixin profileIcon(attrs={})
-	svg(viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round")&attributes(attrs)
+	svg(viewBox="0 0 24 24")&attributes(attrs)
 		path(stroke="none" d="M0 0h24v24H0z")
 		path(d="M3 12a9 9 0 1 0 18 0 9 9 0 1 0-18 0")
 		path(d="M9 10a3 3 0 1 0 6 0 3 3 0 1 0-6 0M6.168 18.849A4 4 0 0 1 10 16h4a4 4 0 0 1 3.834 2.855")
