--- a/views/pages/userBlogPosts.pug
+++ b/views/pages/userBlogPosts.pug
@@ -5,7 +5,7 @@ include ../components/fragment/blogPostFragment
 include ../components/list/blogPostList
 include ../components/list/buttonList
 include ../components/toolbar/navbar
-include ../components/icon/svgIconElement
+include ../components/icon/iconElement
 include ../components/icon/svg/expandIcon
 include ../components/icon/svg/searchIcon
 
@@ -19,7 +19,7 @@ block page
         h1.user-blog-posts-page__heading= title
         section.user-blog-posts-page__toolbar
             .user-blog-posts-page__right-view-tools
-                +svgIconElement(
+                +iconElement(
                     'button',
                     'expandIcon',
                     null,
@@ -31,7 +31,7 @@ block page
                     }
                 )
             .user-blog-posts-page__left-view-tools
-                +svgIconElement(
+                +iconElement(
                     'button',
                     'searchIcon',
                     null,
